--- a/create-k8s-cluster-pipeline.yml
+++ b/create-k8s-cluster-pipeline.yml
@@ -19,8 +19,8 @@ steps:
     backendType: 'azurerm'
     backendServiceArm: 'azure-service-connection'
     ensureBackend: true
-    backendAzureRmResourceGroupName: 'aks-getting-started'
-    backendAzureRmResourceGroupLocation: 'West Europe'
+    backendAzureRmResourceGroupName: 'backend-rg'
+    backendAzureRmResourceGroupLocation: 'eastus'
     backendAzureRmStorageAccountName: 'dhiastorage'
     backendAzureRmContainerName: 'dhiac'
     backendAzureRmKey: 'k8.tfstate'
